@@ -11,6 +11,7 @@
 		to compile the Game classes, manual files and to generate
 		distribution files
 	</description>
+        <import file="nbproject/build-impl.xml"/>
 
 	<property name="game.version" value="1.1.0.1"/>
 
