@@ -39,8 +39,7 @@ javac.target=1.4
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
@@ -69,3 +68,4 @@ run.test.classpath=\
 source.encoding=windows-1252
 src.src.dir=src
 src.src_swing.dir=src_swing
+test.junit.dir=test\\junit
