@@ -9,7 +9,9 @@
                 <root id="src.src.dir"/>
                 <root id="src.src_swing.dir"/>
             </source-roots>
-            <test-roots/>
+            <test-roots>
+                <root id="test.junit.dir" name="test"/>
+            </test-roots>
         </data>
     </configuration>
 </project>
